ready to record

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ select = [
     "RUF",
     "N",
 ]
-ignore = ["T201", "COM812"]
+ignore = ["T201", "COM812", "S605"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = ["ANN201", "S101"]
